[gd_scene load_steps=13 format=2]

[ext_resource path="res://shared/managers/visibility_based_audio/VisibilityBasedSoundManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/enemies/sentry_drone/sentry_drone_sound_manager.gd" type="Script" id=2]
[ext_resource path="res://shared/managers/visibility_based_audio/VisibilityBasedAudioGroup.tscn" type="PackedScene" id=3]
[ext_resource path="res://shared/managers/visibility_based_audio/VisibilityBasedAudioPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/enemies/shared/audio/drone_idle.wav" type="AudioStream" id=5]
[ext_resource path="res://actors/enemies/shared/audio/drone_move.wav" type="AudioStream" id=6]
[ext_resource path="res://actors/enemies/sentry_drone/audio/sentry_drone_bash_impact.wav" type="AudioStream" id=7]
[ext_resource path="res://actors/enemies/sentry_drone/audio/sentry_drone_bash.wav" type="AudioStream" id=8]
[ext_resource path="res://actors/enemies/sentry_drone/audio/sentry_drone_bash_telegraph.wav" type="AudioStream" id=9]
[ext_resource path="res://actors/enemies/sentry_drone/audio/sentry_drone_bash_missed.wav" type="AudioStream" id=10]
[ext_resource path="res://actors/enemies/shared/audio/enemy_hit_mechanical.wav" type="AudioStream" id=11]
[ext_resource path="res://actors/enemies/shared/audio/enemy_killed_mechanical.wav" type="AudioStream" id=12]

[node name="SentryDroneSoundManager" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VisibilityBasedAudioGroup" parent="AudioGroups" index="0" instance=ExtResource( 3 )]
attenuation_visibility_radius_tiles = 4.0

[node name="Idle" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="0" instance=ExtResource( 4 )]
max_volume_db = -16.0
stream = ExtResource( 5 )

[node name="Move" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="1" instance=ExtResource( 4 )]
max_volume_db = -12.0
stream = ExtResource( 6 )

[node name="BashTelegraph" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="2" instance=ExtResource( 4 )]
stream = ExtResource( 9 )

[node name="Bash" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="3" instance=ExtResource( 4 )]
stream = ExtResource( 8 )

[node name="BashImpact" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="4" instance=ExtResource( 4 )]
stream = ExtResource( 7 )

[node name="BashMissed" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="5" instance=ExtResource( 4 )]
stream = ExtResource( 10 )

[node name="Hit" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="6" instance=ExtResource( 4 )]
max_volume_db = -8.0
stream = ExtResource( 11 )

[node name="Killed" parent="AudioGroups/VisibilityBasedAudioGroup/AudioPlayers" index="7" instance=ExtResource( 4 )]
stream = ExtResource( 12 )

[editable path="AudioGroups/VisibilityBasedAudioGroup"]
